# FRQS-Network

./: CMakeLists.txt  README.md
docs/: architecture.md  documentation.md  security guide & threat model.md
include/core/: context.hpp  middleware.hpp  router.hpp  server.hpp
include/http/: multipart_parser.hpp
include/net/: http_client.hpp
include/plugin/: plugin.hpp  static_files.hpp
include/utils/: config.hpp  input_injector.hpp  screen_capturer.hpp
public/: index.html
src/: main.cpp
src/core/: context.cpp  router.cpp  server.cpp
src/http/: multipart_parser.cpp
src/net/: http_client.cpp  socket.cpp
src/utils/: config.cpp  input_injector.cpp  screen_capturer.cpp
